...

    <ScrollView
        android:id="@+id/scrollViewOfActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

            <androidx.cardview.widget.CardView
                android:id="@+id/SectionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/rgSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/spinnerCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chbPlaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titFullName"
                    style="@style/ForEditText"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tetFullName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titPhoneNumber"
                    style="@style/ForEditText"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tetPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titEmailAddress"
                    style="@style/ForEditText"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tetEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titBirthDate"
                    style="@style/ForEditText"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tetBirthDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titAddress"
                    style="@style/ForEditText"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tetAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                <Spinner
                    android:id="@+id/spinnerSscHsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintTop_toBottomOf="@id/tvPercentageSscHsc" />
                <Spinner
                    android:id="@+id/spinnerBComBCA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
...
